crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank-line-between-methods_E30_comment_before_definition.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E301 [*] Expected 1 blank line, found 0
  --> E30_comment_before_definition.py:18:5
   |
16 |         pass
17 |     # Comment about the method.
18 |     def b(self):
   |     ^^^
19 |         pass
   |
help: Add missing blank line
   |
16 |         pass
17 +
18 |     # Comment about the method.
   |
