crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank-line-with-whitespace_W29.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
W293 [*] Blank line contains whitespace
 --> W29.py:7:1
  |
5 | #: W293:2:1
6 | class Foo(object):
7 |     
  | ^^^^
8 |     bang = 12
9 | #: W291:2:35
  |
help: Remove whitespace from blank line
  |
6 | class Foo(object):
  -     
7 +
8 |     bang = 12
  |
