crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank-line-with-whitespace_W293.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
W293 [*] Blank line contains whitespace
 --> W293.py:4:1
  |
2 | class Chassis(RobotModuleTemplate):
3 |     """底盘信息推送控制
4 |     
  | ^^^^
5 |     """\
  |
help: Remove whitespace from blank line
  |
3 |     """底盘信息推送控制
  -     
4 +
5 |     """\
  |
note: This is an unsafe fix and may change runtime behavior

W293 [*] Blank line contains whitespace
  --> W293.py:10:1
   |
 8 | """""" \
 9 |     \
10 |     
   | ^^^^
help: Remove whitespace from blank line
  |
7 |
  - """""" \
  -     \
  -     
8 + """""" 
9 |
  |

W293 [*] Blank line contains whitespace
  --> W293.py:16:1
   |
14 |  " \
15 |     \
16 |     
   | ^^^^
17 | '''blank line with whitespace
   |
help: Remove whitespace from blank line
   |
13 | "abc\
   -  " \
   -     \
   -     
14 +  " 
15 | '''blank line with whitespace
   |

W293 [*] Blank line contains whitespace
  --> W293.py:18:1
   |
17 | '''blank line with whitespace
18 |  
   | ^
19 | inside a multiline string'''
   |
help: Remove whitespace from blank line
   |
17 | '''blank line with whitespace
   -  
18 +
19 | inside a multiline string'''
   |
note: This is an unsafe fix and may change runtime behavior
