crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank-lines-top-level_E30_comment_before_definition.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E302 [*] Expected 2 blank lines, found 1
 --> E30_comment_before_definition.py:7:1
  |
6 | # Comment about the function.
7 | def main():
  | ^^^
8 |     pass
  |
help: Add missing blank line(s)
  |
5 |
6 +
7 | # Comment about the function.
  |

E302 [*] Expected 2 blank lines, found 0
  --> E30_comment_before_definition.py:25:1
   |
23 |     pass
24 | # Comment that trails the previous definition without a blank line.
25 | def second():
   | ^^^
26 |     pass
   |
help: Add missing blank line(s)
   |
23 |     pass
24 +
25 +
26 | # Comment that trails the previous definition without a blank line.
   |
