crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank-lines-top-level_E30_syntax_error.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
invalid-syntax: Expected `]`, found `(`
 --> E30_syntax_error.py:4:15
  |
2 | # parenthesis.
3 |
4 | def foo[T1, T2():
  |               ^
5 |     pass
  |

E302 Expected 2 blank lines, found 1
 --> E30_syntax_error.py:7:1
  |
5 |     pass
6 |
7 | def bar():
  | ^^^
8 |     pass
  |
help: Add missing blank line(s)

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:13:18
   |
12 | class Foo:
13 |     def __init__(
   |                  ^
14 |         pass
15 |     def method():
   |

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:18:11
   |
16 |         pass
17 |
18 | foo = Foo(
   |           ^

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:21:9
   |
21 | def top(
   |         ^
22 |     def nested1():
23 |         pass
   |
