crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_E301_notebook.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E301 [*] Expected 1 blank line, found 0
  --> E30.ipynb:13:5
   |
11 |     def method(cls) -> None:
12 |         pass
13 |     @classmethod
   |     ^
14 |     def cls_method(cls) -> None:
15 |         pass
   |
help: Add missing blank line
13 -     @classmethod
   |
